# prediction-markets

./: .gitignore  analyze_arbitrage.py  analyze_arbitrage_trades.py  arbitrage_detector.py  fetch_events.py  figure19_delta.py  figure5.py  market_counter.py  pyproject.toml  summary_stats.py
docs/: arbitrage_methodology.md  data.md  scripts.md
obsolete/: arbitrage_batch.py  arbitrage_detector.py  market_counter.obsolete.py  market_counter_gamma.py  market_counter_v2.py
