[project]
name = "prediction-markets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "polars>=1.37.1",
    "py-clob-client>=0.34.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "web3>=7.14.0",
]
